--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
       <script type="text/javascript" src='js/plugins/leaflet/leaflet-iiif.js'></script>
 
+    <script src="js/plugins/leaflet/leaflet-rotate/leaflet-rotate-src.js"></script>
+
     <link rel="stylesheet" href="css/style.css" />
       <script src="js/map_manager.js"></script>
       <script src="js/image_manager.js"></script>
@@ -46,7 +48,13 @@
   </head>
 
   <body>
-
+        <div class="overlay justify-content-center">
+            <div class="progress">
+                  <div id="loader" class="progress-bar progress-bar-success progress-bar-striped active align-middle bg-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                    <span id="current-progress"></span>
+                  </div>
+                 </div>
+        </div>
         <div id="leaflet_spinner" class="spinner-border spinner-border-sm" role="status">
           <span class="sr-only">Loading...</span>
         </div>
@@ -54,6 +62,12 @@
   <div id="image_map" class="map">
       <a class="leaflet-popup-close-button" role="button" aria-label="Close popup" href="javascript:void(0);" onclick="image_manager.hide_image()"><span aria-hidden="true">×</span></a>
 
+
+     <a href="javascript:void(0);" role="button" onclick="image_manager.rotate_image()"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2z"></path>
+          <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466"></path>
+        </svg>
+      </a>
   </div>
   <div id="map"></div>
 
@@ -65,16 +79,15 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
+              <div id="transcription_data"></div>
               <div id="data_form">
                  <div class="row">
-                      <div class="col">
                         <input class="data_sheet_id" type="hidden" data="id"/>
-                      </div>
                       <div class="col">
                         <input  class="short_input data_form_date"  data="date" type="text"/>
                       </div>
                       <div class="col">
-                         <input class="short_input"  data="measure" type="text"/>
+                         <input class="short_input"  data="measure" type="number"/>
                       </div>
                       <div class="col">
                          <button type="button" class="btn btn-success" onclick="transcription.duplicate_row(this);">
