improved image_map button appearance

--- a/index.html
+++ b/index.html
@@ -60,14 +60,7 @@
         </div>
 
   <div id="image_map" class="map">
-      <a class="leaflet-popup-close-button" role="button" aria-label="Close popup" href="javascript:void(0);" onclick="image_manager.hide_image()"><span aria-hidden="true">×</span></a>
-
-
-     <a href="javascript:void(0);" role="button" onclick="image_manager.rotate_image()"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2z"></path>
-          <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466"></path>
-        </svg>
-      </a>
+      <a class="leaflet-popup-close-button" role="button" aria-label="Close popup" href="javascript:void(0);" onclick="image_manager.hide_image()" style="z-index: 100000;"><span aria-hidden="true">×</span></a>
   </div>
   <div id="map"></div>
 
